# PythonProject

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  report.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_shop_py.html
src/: shop.py
tests/: test_shop.py
