[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksimka",email = "mister.max1988@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-html (>=4.2.0,<5.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--html=report.html --self-contained-html"

